deploy: 28e5888e326178dfa7566f78c4e6116097f537ae

--- a/mathematical-preliminaries/elliptic-curves.html
+++ b/mathematical-preliminaries/elliptic-curves.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="../mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item expanded "><a href="../mathematical-preliminaries/elliptic-curves.html" class="active">Elliptic Curves</a></li><li class="chapter-item "><a href="../mathematical-preliminaries/pairings.html">Pairings</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="../mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item expanded "><a href="../mathematical-preliminaries/elliptic-curves.html" class="active">Elliptic Curves</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -231,9 +231,6 @@ The point at infinity (<span class="katex"><span class="katex-html" aria-hidden=
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../mathematical-preliminaries/pairings.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -245,9 +242,6 @@ The point at infinity (<span class="katex"><span class="katex-html" aria-hidden=
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../mathematical-preliminaries/pairings.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
