deploy: b768330eae26c8503aa85aa79fa6a273648cc3f7

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item expanded "><a href="mathematical-preliminaries/polynomials.html" class="active">Polynomials</a></li><li class="chapter-item "><a href="mathematical-preliminaries/elliptic-curves.html">Elliptic Curves</a></li><li class="chapter-item affix "><a href="bibliography.html">References</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item expanded "><a href="mathematical-preliminaries/polynomials.html" class="active">Polynomials</a></li><li class="chapter-item "><a href="mathematical-preliminaries/elliptic-curves.html">Elliptic Curves</a></li><li class="chapter-item "><a href="mathematical-preliminaries/pairings.html">Pairings</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
