--- a/mathematical-preliminaries/elliptic-curves.html
+++ b/mathematical-preliminaries/elliptic-curves.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="../mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item expanded "><a href="../mathematical-preliminaries/elliptic-curves.html" class="active">Elliptic Curves</a></li><li class="chapter-item affix "><a href="../bibliography.html">References</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="../mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item expanded "><a href="../mathematical-preliminaries/elliptic-curves.html" class="active">Elliptic Curves</a></li><li class="chapter-item "><a href="../mathematical-preliminaries/pairings.html">Pairings</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -168,7 +168,6 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="elliptic-curves"><a class="header" href="#elliptic-curves">Elliptic Curves</a></h1>
-<p>Cite test: [<a href="../bibliography.html#BLS01">BLS01</a>]</p>
 <h2 id="contents"><a class="header" href="#contents">Contents</a></h2>
 <ul>
 <li><a href="#affine-versus-projective-coordinates">Affine versus Projective Coordinates</a>
@@ -263,7 +262,7 @@ The point at infinity (<span class="katex"><span class="katex-html" aria-hidden=
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../bibliography.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../mathematical-preliminaries/pairings.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -277,7 +276,7 @@ The point at infinity (<span class="katex"><span class="katex-html" aria-hidden=
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../bibliography.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../mathematical-preliminaries/pairings.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
