--- a/mathematical-preliminaries/pairings.html
+++ b/mathematical-preliminaries/pairings.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>References - mdbook test</title>
+        <title>Pairings - mdbook test</title>
 
 
         <!-- Custom HTML head -->
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -35,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item "><a href="mathematical-preliminaries/elliptic-curves.html">Elliptic Curves</a></li><li class="chapter-item affix "><a href="bibliography.html" class="active">References</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="../mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item "><a href="../mathematical-preliminaries/elliptic-curves.html">Elliptic Curves</a></li><li class="chapter-item expanded "><a href="../mathematical-preliminaries/pairings.html" class="active">Pairings</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -137,7 +137,7 @@
                     <h1 class="menu-title">mdbook test</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -167,58 +167,13 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="references"><a class="header" href="#references">References</a></h1>
-<script type="text/javascript">
-function defaultCopyTextToClipboard(text) {
-    var textArea = document.createElement("textarea");
-    textArea.value = text;
-
-    // Avoid scrolling to bottom
-    textArea.style.top = "0";
-    textArea.style.left = "0";
-    textArea.style.position = "fixed";
-
-    document.body.appendChild(textArea);
-    textArea.focus();
-    textArea.select();
-
-    try {
-        var ok = document.execCommand('copy');
-        var msg = ok ? 'was ok' : 'failed';
-        console.log('Backing copy: Text copy was ' + msg);
-    } catch (err) {
-        console.error('Backing copy: Unable to copy text', err);
-    }
-
-    document.body.removeChild(textArea);
-}
-
-function copyToClipboard(text) {
-    if (!navigator.clipboard) {
-        defaultCopyTextToClipboard(text);
-        return;
-    }
-    navigator.clipboard.writeText(text).then(function() {
-        console.log('Text copied to clipboard');
-    }, function(err) {
-        console.error('Error copying text: ', err);
-    });
-}
-
-</script>
-<style></style>
-<div class="bib_div">
-<summary class=citation>
-<a id="BLS01">[BLS01]</a> Dan Boneh, Ben Lynn,  and Hovav Shacham. <a href="https://www.iacr.org/archive/asiacrypt2001/22480516.pdf" target="_blank"><cite>Short Signatures from the Weil Pairing</cite></a>. In proceedings of ASIACRYPT 2001.
-</summary>
-</div>
-<br/>
+<h1 id="pairings"><a class="header" href="#pairings">Pairings</a></h1>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="mathematical-preliminaries/elliptic-curves.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../mathematical-preliminaries/elliptic-curves.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -229,7 +184,7 @@ function copyToClipboard(text) {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="mathematical-preliminaries/elliptic-curves.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../mathematical-preliminaries/elliptic-curves.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
@@ -245,13 +200,13 @@ function copyToClipboard(text) {
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
