--- a/print.html
+++ b/print.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item "><a href="mathematical-preliminaries/elliptic-curves.html">Elliptic Curves</a></li><li class="chapter-item affix "><a href="bibliography.html">References</a></li></ol>
+                <ol class="chapter"><li class="chapter-item affix "><li class="part-title">Mathematical Preliminaries</li><li class="chapter-item "><div>Groups</div></li><li class="chapter-item "><div>Rings and Fields</div></li><li class="chapter-item "><a href="mathematical-preliminaries/polynomials.html">Polynomials</a></li><li class="chapter-item "><a href="mathematical-preliminaries/elliptic-curves.html">Elliptic Curves</a></li><li class="chapter-item "><a href="mathematical-preliminaries/pairings.html">Pairings</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -221,7 +221,6 @@ The coordinates of a polynomial <span class="katex"><span class="katex-html" ari
 <p>An important application of Lagrange interpolation is <a href="https://en.wikipedia.org/wiki/Shamir%27s_secret_sharing">Shamir's secret sharing</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="elliptic-curves"><a class="header" href="#elliptic-curves">Elliptic Curves</a></h1>
-<p>Cite test: [<a href="mathematical-preliminaries/../bibliography.html#BLS01">BLS01</a>]</p>
 <h2 id="contents-1"><a class="header" href="#contents-1">Contents</a></h2>
 <ul>
 <li><a href="mathematical-preliminaries/elliptic-curves.html#affine-versus-projective-coordinates">Affine versus Projective Coordinates</a>
@@ -308,52 +307,7 @@ Projective points in Jacobian coordinates are defined by the equivalence relatio
 The point at infinity (<span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">Z</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.6444em;"></span><span class="mord">0</span></span></span></span>) is the equivalence class <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord">1</span><span class="mspace nobreak"></span><span class="mspace" style="margin-right:0.1111em;"></span><span class="mpunct"></span><span class="mspace" style="margin-right:-0.1667em;"></span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord"><span class="mrel">:</span></span><span class="mspace" style="margin-right:0.3333em;"></span><span class="mord">1</span><span class="mspace nobreak"></span><span class="mspace" style="margin-right:0.1111em;"></span><span class="mpunct"></span><span class="mspace" style="margin-right:-0.1667em;"></span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord"><span class="mrel">:</span></span><span class="mspace" style="margin-right:0.3333em;"></span><span class="mord">0</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1.0641em;vertical-align:-0.25em;"></span><span class="mopen">{(</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03148em;">k</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03148em;">k</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">3</span></span></span></span></span></span></span></span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord">0</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">:</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.7335em;vertical-align:-0.0391em;"></span><span class="mord mathnormal" style="margin-right:0.03148em;">k</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">∈</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord"><span class="mord mathbb">F</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.6887em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mbin mtight">∗</span></span></span></span></span></span></span></span><span class="mclose">}</span></span></span></span>.</p>
 <p>See <a href="http://www.hyperelliptic.org/EFD/">http://www.hyperelliptic.org/EFD/</a> for a list of various other possible coordinates systems.</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="references"><a class="header" href="#references">References</a></h1>
-<script type="text/javascript">
-function defaultCopyTextToClipboard(text) {
-    var textArea = document.createElement("textarea");
-    textArea.value = text;
-
-    // Avoid scrolling to bottom
-    textArea.style.top = "0";
-    textArea.style.left = "0";
-    textArea.style.position = "fixed";
-
-    document.body.appendChild(textArea);
-    textArea.focus();
-    textArea.select();
-
-    try {
-        var ok = document.execCommand('copy');
-        var msg = ok ? 'was ok' : 'failed';
-        console.log('Backing copy: Text copy was ' + msg);
-    } catch (err) {
-        console.error('Backing copy: Unable to copy text', err);
-    }
-
-    document.body.removeChild(textArea);
-}
-
-function copyToClipboard(text) {
-    if (!navigator.clipboard) {
-        defaultCopyTextToClipboard(text);
-        return;
-    }
-    navigator.clipboard.writeText(text).then(function() {
-        console.log('Text copied to clipboard');
-    }, function(err) {
-        console.error('Error copying text: ', err);
-    });
-}
-
-</script>
-<style></style>
-<div class="bib_div">
-<summary class=citation>
-<a id="BLS01">[BLS01]</a> Dan Boneh, Ben Lynn,  and Hovav Shacham. <a href="https://www.iacr.org/archive/asiacrypt2001/22480516.pdf" target="_blank"><cite>Short Signatures from the Weil Pairing</cite></a>. In proceedings of ASIACRYPT 2001.
-</summary>
-</div>
-<br/>
+<h1 id="pairings"><a class="header" href="#pairings">Pairings</a></h1>
 
                     </main>
 
