--- a/mathematical-preliminaries/elliptic-curves.html
+++ b/mathematical-preliminaries/elliptic-curves.html
@@ -300,6 +300,8 @@ The point at infinity (<span class="katex"><span class="katex-html" aria-hidden=
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
+        <script src="../mermaid.min.js"></script>
+        <script src="../mermaid-init.js"></script>
 
 
     </div>
