--- a/mathematical-preliminaries/pairings.html
+++ b/mathematical-preliminaries/pairings.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href=".././assets/custom.css">
 
     </head>
     <body>
@@ -209,8 +210,8 @@
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../mermaid.min.js"></script>
-        <script src="../mermaid-init.js"></script>
+        <script src=".././assets/mermaid.min.js"></script>
+        <script src=".././assets/mermaid-init.js"></script>
 
 
     </div>
