--- a/print.html
+++ b/print.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="./assets/custom.css">
 
     </head>
     <body>
@@ -350,8 +351,8 @@ The point at infinity (<span class="katex"><span class="katex-html" aria-hidden=
         <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="mermaid.min.js"></script>
-        <script src="mermaid-init.js"></script>
+        <script src="./assets/mermaid.min.js"></script>
+        <script src="./assets/mermaid-init.js"></script>
 
         <script>
         window.addEventListener('load', function() {
